made some changes

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
                 <th>Standard Deviation Money</th>
             </tr>
         </thead>
+        <tbody>
+            <tr>
+                <td>102581.787109375</td>
+                <td>100580.78</td>
+                <td>102612.13500000001</td>
+                <td>105137.065</td>
+                <td>6869.0405657902975</td>
+            </tr>
+        </tbody>
     </table>
 
     <table class="uk-table uk-table-striped uk-table-responsive">
