--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
+    <p class="text-center text-xl">Last updated 10:15:52 10-28-2024</p>
     <table class="uk-table uk-table-striped uk-table-responsive">
         <thead>
             <tr>
