made a quick colour change

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </script>
 </head>
 
-<body class="bg-background text-foreground">
+<body class="bg-background text-foreground bg-gradient-to-r from-sky-500 to-indigo-500">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 14:49:52 10-28-2024</p>
+    <p class="text-center text-xl">Last updated 14:52:00 10-28-2024</p>
     <table class="uk-table uk-table-striped uk-table-responsive">
         <thead>
             <tr>
