--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 14:56:53 10-28-2024</p>
+    <p class="text-center text-xl">Last updated 14:59:50 10-28-2024</p>
     <table class="uk-table uk-table-striped uk-table-responsive">
         <thead>
             <tr>
@@ -3660,7 +3660,7 @@
 
     <div class="uk-background-cover uk-flex uk-flex-center uk-flex-middle uk-height-medium"
         data-src="./images/evan_conrad.jpg" uk-img>
-        <h1>Evan Conrad</h1>
+        <h1 class = "text-2xl">Evan Conrad</h1>
     </div>
 
 
