--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 23:53:55 10-28-2024</p>
+    <p class="text-center text-xl">Last updated 23:55:35 10-28-2024</p>
     <table class="uk-table uk-table-striped uk-table-responsive">
         <thead>
             <tr>
@@ -56,7 +56,7 @@
         </tbody>
     </table>
     <br>
-    <div class="h-[50vmin] content-center">
+    <div class="h-[50vmin] flex justify-center items-center">
         <canvas id="stockChart"></canvas>
     </div>
 
