--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 23:55:35 10-28-2024</p>
+    <p class="text-center text-xl">Last updated 00:00:22 10-29-2024</p>
     <table class="uk-table uk-table-striped uk-table-responsive">
         <thead>
             <tr>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="text-center">
-        <input type="checkbox" id="toggleMin" checked>
+        <input type="checkbox" id="toggleMin">
         <label for="toggleMin">Min Money</label>
         <input type="checkbox" id="toggleMax" checked>
         <label for="toggleMax">Max Money</label>
