--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 08:29:46 10-29-2024</p>
+    <p class="text-center text-xl">Last updated 08:33:58 10-29-2024</p>
     <table class="uk-table uk-table-striped uk-table-responsive">
         <thead>
             <tr>
@@ -3665,12 +3665,12 @@
         
 
     </table>
-
+    <!-- 
 
     <div class="uk-background-cover uk-flex uk-flex-center uk-flex-middle uk-height-medium"
         data-src="./images/evan_conrad.jpg" uk-img>
         <h1 class="text-2xl">Evan Conrad</h1>
-    </div>
+    </div> -->
 
     <script>
         const ctx = document.getElementById('stockChart').getContext('2d');
