Added the infamous Miller Tracker

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+19
 <!DOCTYPE html>
 <html>
 
@@ -34,7 +35,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 00:17:19 10-31-2024</p>
+    <p class="text-center text-xl">Last updated 00:32:11 10-31-2024</p>
     <br>
     <div class="flex flex-wrap justify-center items-start">
         <!-- Chart Container -->
@@ -50,6 +51,10 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <th>Miller Tracker</th>
+                        <td>19</td>
+                    </tr>
                     <tr>
                         <th>Average Money</th>
                         <td>$102,298.64</td>
