Quick formatting changes I guess

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>The Leaderboard of the Great Quicksilver Stock Exchange</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/franken-ui@1.1.0/dist/css/core.min.css" />
     <script src="https://unpkg.com/franken-ui@1.1.0/dist/js/core.iife.js" type="module"></script>
     <script src="https://unpkg.com/franken-ui@1.1.0/dist/js/icon.iife.js" type="module"></script>
@@ -34,11 +35,11 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 00:36:07 10-31-2024</p>
+    <p class="text-center text-xl">Last updated 00:39:31 10-31-2024</p>
     <br>
     <div class="flex flex-wrap justify-center items-start">
         <!-- Chart Container -->
-        <div class="w-full md:w-1/2 p-4">
+        <div class="w-full md:w-1/2 p-4 h-full">
             <canvas id="stockChart"></canvas>
         </div>
         <!-- Vertical Summary Statistics Table -->
@@ -5511,7 +5512,7 @@
             type: 'line',
             data: data,
             responsive: true,
-            maintainAspectRatio: false,
+            maintainAspectRatio: true,
         }
 
         var myLineChart = new Chart(ctx, config);
