--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 00:43:26 10-31-2024</p>
+    <p class="text-center text-xl">Last updated 00:58:10 10-31-2024</p>
     <br>
-    <div class="flex flex-wrap justify-center items-start">
+    <div class="flex flex-wrap justify-center ">
         <!-- Chart Container -->
-        <div class="w-full md:w-1/2 p-4 h-full">
+        <div class="w-full md:w-1/2 p-4 h-full md:h-3/4">
             <canvas id="stockChart"></canvas>
         </div>
         <!-- Vertical Summary Statistics Table -->
-        <div class="w-full md:w-1/4 p-4">
+        <div class="w-full md:w-1/4 p-4 md:h-3/4">
             <table class="uk-table uk-table-striped uk-table-responsive">
                 <thead>
                     <tr>
@@ -79,7 +79,7 @@
             </table>
         </div>
         <!-- New section for stocks and their counts -->
-        <div class="w-full md:w-1/4 p-4">
+        <div class="w-full md:w-1/4 p-4 md:h-3/4">
             <div class="overflow-y-auto" style="max-height: 400px;">
                 <table class="uk-table uk-table-striped uk-table-responsive">
                     <thead>
