--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 00:58:10 10-31-2024</p>
+    <p class="text-center text-xl">Last updated 01:00:01 10-31-2024</p>
     <br>
     <div class="flex flex-wrap justify-center ">
         <!-- Chart Container -->
@@ -53,7 +53,7 @@
                 <tbody>
                     <tr>
                         <th>Miller Tracker</th>
-                        <td>19</td>
+                        <td>#19th place</td>
                     </tr>
                     <tr>
                         <th>Average Money</th>
