--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">Imagine if Investopedia was good at making a leaderboard</h1>
     <br>
-    <p class="text-center text-xl">Last updated 10:32:07 10-31-2024</p>
+    <p class="text-center text-xl">Last updated 10:32:19 10-31-2024</p>
     <br>
     <p class="text-center text-xl">Code can be found at: <a
-            href="https://github.com/lelandstocks/lelandstocks.github.io"> LelandStocks</a></p>
+            href="https://github.com/lelandstocks/lelandstocks.github.io" class="underline text-blue-600 hover:text-blue-800 visited:text-purple-600"> LelandStocks</a></p>
     <div class="flex flex-wrap justify-center ">
         <!-- Chart Container -->
         <div class="w-full md:w-1/2 p-4 h-full md:h-3/4">
