--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -214,3 +214,90 @@
 </body>
 
 </html>
+[np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(61), np.int64(60), np.int64(54), np.int64(54), np.int64(54), np.int64(52), np.int64(56), np.int64(56), np.int64(57), np.int64(56), np.int64(55), np.int64(56), np.int64(56), np.int64(56), np.int64(44), np.int64(44), np.int64(44), np.int64(47), np.int64(48), np.int64(51), np.int64(50), np.int64(51), np.int64(52), np.int64(53), np.int64(53), np.int64(53), np.int64(53), np.int64(51), np.int64(51), np.int64(51), np.int64(51), np.int64(51), np.int64(51), np.int64(53), np.int64(52), np.int64(52), np.int64(53), np.int64(52), np.int64(51), np.int64(50), np.int64(54), np.int64(53), np.int64(50), np.int64(48), np.int64(48), np.int64(49), np.int64(49), np.int64(49), np.int64(49), np.int64(49), np.int64(47), np.int64(46), np.int64(46), np.int64(47), np.int64(45), np.int64(45), np.int64(45), np.int64(46), np.int64(47), np.int64(48), np.int64(49), np.int64(51), np.int64(50), np.int64(51), np.int64(49), np.int64(47), np.int64(48), np.int64(49), np.int64(51), np.int64(50), np.int64(48), np.int64(51), np.int64(51), np.int64(50), np.int64(22), np.int64(20), np.int64(21), np.int64(20), np.int64(19), np.int64(20), np.int64(20), np.int64(20), np.int64(20), np.int64(21), np.int64(22), np.int64(23), np.int64(23), np.int64(23), np.int64(21), np.int64(21), np.int64(21), np.int64(20), np.int64(20), np.int64(20), np.int64(21), np.int64(21), np.int64(22), np.int64(21), np.int64(23), np.int64(23), np.int64(22), np.int64(22), np.int64(21), np.int64(22), np.int64(22), np.int64(21), np.int64(22), np.int64(21), np.int64(21), np.int64(21), np.int64(21), np.int64(21), np.int64(21), np.int64(21), np.int64(21), np.int64(21), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(19), np.int64(17), np.int64(16), np.int64(14), np.int64(14), np.int64(14), np.int64(15), np.int64(15), np.int64(15), np.int64(14), np.int64(13), np.int64(13), np.int64(13), np.int64(13), np.int64(18), np.int64(18), np.int64(23), np.int64(23), np.int64(23), np.int64(25), np.int64(24), np.int64(24), np.int64(24), np.int64(24), np.int64(23), np.int64(22), np.int64(19), np.int64(23), np.int64(19), np.int64(24), np.int64(27), np.int64(27), np.int64(58), np.int64(72), np.int64(44), np.int64(45), np.int64(45), np.int64(44), np.int64(44), np.int64(46)] [np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(102745.88), np.float64(103161.35), np.float64(103499.47), np.float64(103534.46), np.float64(103803.92), np.float64(104104.26), np.float64(103690.08), np.float64(103584.62), np.float64(103625.94), np.float64(103800.01), np.float64(103757.55), np.float64(103535.86), np.float64(103570.3), np.float64(103445.44), np.float64(104305.73), np.float64(104305.73), np.float64(104305.73), np.float64(103996.28), np.float64(103819.64), np.float64(103774.49), np.float64(103910.67), np.float64(103685.51), np.float64(103675.71), np.float64(103585.88), np.float64(103641.72), np.float64(103563.11), np.float64(103683.83), np.float64(103806.53), np.float64(103928.33), np.float64(103885.83), np.float64(103815.28), np.float64(103954.41), np.float64(103899.21), np.float64(103843.44), np.float64(103898.35), np.float64(104034.35), np.float64(103909.29), np.float64(104047.51), np.float64(103981.23), np.float64(104022.58), np.float64(103723.74), np.float64(103803.16), np.float64(103968.82), np.float64(104136.06), np.float64(104209.43), np.float64(104286.43), np.float64(104349.1), np.float64(104276.06), np.float64(104371.28), np.float64(104364.42), np.float64(104500.32), np.float64(104580.59), np.float64(104608.23), np.float64(104512.57), np.float64(104687.2), np.float64(104714.37), np.float64(104708.61), np.float64(104554.01), np.float64(104570.72), np.float64(104529.99), np.float64(104519.01), np.float64(104488.06), np.float64(104447.71), np.float64(104444.66), np.float64(104520.41), np.float64(104672.85), np.float64(104630.35), np.float64(104545.81), np.float64(104375.71), np.float64(104517.61), np.float64(104597.75), np.float64(104156.18), np.float64(104156.18), np.float64(104156.18), np.float64(107418.93), np.float64(107819.55), np.float64(107259.88), np.float64(107610.66), np.float64(108160.61), np.float64(108043.11), np.float64(108133.99), np.float64(108201.35), np.float64(108028.69), np.float64(107724.6), np.float64(107623.15), np.float64(107438.78), np.float64(107522.3), np.float64(107395.83), np.float64(107561.62), np.float64(107525.09), np.float64(107568.94), np.float64(107661.17), np.float64(107604.54), np.float64(107749.88), np.float64(107628.87), np.float64(107747.58), np.float64(107707.68), np.float64(107720.9), np.float64(107538.22), np.float64(107363.8), np.float64(107428.05), np.float64(107410.61), np.float64(107481.71), np.float64(107218.89), np.float64(107054.47), np.float64(107160.68), np.float64(107242.58), np.float64(107224.71), np.float64(107289.35), np.float64(107378.36), np.float64(107313.75), np.float64(107519.32), np.float64(107553.14), np.float64(107500.25), np.float64(107440.32), np.float64(107364.14), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107362.36), np.float64(107396.95), np.float64(107173.0), np.float64(107109.58), np.float64(107341.95), np.float64(107571.43), np.float64(107127.93), np.float64(106729.87), np.float64(106547.58), np.float64(106397.61), np.float64(106917.25), np.float64(106917.25), np.float64(106917.25), np.float64(106917.25), np.float64(106669.28), np.float64(106669.28), np.float64(105315.97), np.float64(105569.64), np.float64(105750.01), np.float64(105511.76), np.float64(105770.21), np.float64(105975.51), np.float64(106226.36), np.float64(106120.06), np.float64(106081.13), np.float64(106239.75), np.float64(106359.69), np.float64(106157.99), np.float64(106619.1), np.float64(105659.58), np.float64(104851.0), np.float64(104915.81), np.float64(102110.87), np.float64(101344.01), np.float64(103329.0), np.float64(103171.75), np.float64(103173.18), np.float64(103199.14), np.float64(103217.8), np.float64(103095.07)]
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Player Statistics</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/franken-ui@1.1.0/dist/css/core.min.css" />
+    <script src="https://unpkg.com/franken-ui@1.1.0/dist/js/core.iife.js" type="module"></script>
+    <script src="https://unpkg.com/franken-ui@1.1.0/dist/js/icon.iife.js" type="module"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
+</head>
+
+<body class="bg-background text-foreground">
+    <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
+    <br>
+    <p class="text-center text-xl">Last updated 15:48:41 11-04-2024</p>
+    <br>
+    <div class="flex flex-wrap justify-center">
+        <!-- Chart Container -->
+        <div class="w-full p-4 h-full flex chart-container">
+            <canvas id="playerChart"></canvas>
+        </div>
+    </div>
+    
+    
+    <script>
+        const ctx = document.getElementById('stockChart');
+
+        var labels = ;
+        var money = ;
+        const data = {
+            labels: labels,
+            datasets: [
+                {
+                    label: 'Money',
+                    data: money,
+                    fill: false,
+                    borderColor: 'rgb(75, 192, 192)',
+                }
+            ]
+        };
+        const config = {
+            type: 'line',
+            data: data,
+            options: {
+                maintainAspectRatio: false,
+                scales: {
+                    x: {
+                        display: false, // Hides the x-axis labels
+                    },
+                },
+                plugins: {
+                    scales: {
+                        display: false // Hides the dataset labels from the legend
+                    },
+                    zoom: {
+                        zoom: {
+                            wheel: {
+                                enabled: true,
+                            },
+                            pinch: {
+                                enabled: true
+                            },
+                            mode: 'x',
+                        },
+                        pan: {
+                            enabled: true
+                        }
+                    },
+
+                }
+            }
+        };
+
+        var myLineChart = new Chart(ctx, config);
+        window.addEventListener('resize', () => {
+            myLineChart.resize();
+        });
+    </script>
+
+</body>
+
+</html>
