--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -16,9 +16,9 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:13:10 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:13:26 11-05-2024</p>
     <br>
-    <canvas id="playerChart" class = "h-[100vmax]"></canvas>
+    <canvas id="playerChart" class = "h-[100%]"></canvas>
 
 
     <script>
