--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -16,10 +16,11 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:13:26 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:14:15 11-05-2024</p>
     <br>
-    <canvas id="playerChart" class = "h-[100%]"></canvas>
-
+    <div class = "h-[100%]">
+        <canvas id="playerChart"></canvas>
+    </div>
 
     <script>
         const ctx = document.getElementById('playerChart');
