--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -11,14 +11,22 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
+    <style>
+        #playerChart {
+            width: 100% !important;
+            height: auto !important;
+            /* Allow height to scale based on content */
+            flex-grow: 1;
+        }
+    </style>
 </head>
 
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:15:06 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:15:57 11-05-2024</p>
     <br>
-    <div class = "h-full md:h-auto">
+    <div class="h-full md:h-auto">
         <canvas id="playerChart"></canvas>
     </div>
 
