--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -23,9 +23,9 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:16:26 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:18:19 11-05-2024</p>
     <br>
-    <div class="h-full md:h-auto">
+    <div class="flex justify-center items-center">
         <canvas id="playerChart"></canvas>
     </div>
 
