--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -23,10 +23,10 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:18:38 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:20:18 11-05-2024</p>
     <br>
     <div class="h-full md:h-auto flex justify-center items-center">
-        <canvas id="playerChart"></canvas>
+        <canvas id="playerChart" class="mx-auto"></canvas>
     </div>
 
     <script>
