--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -11,22 +11,18 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
-    <style>
-        #playerChart {
-            width: 60% !important;
-            /* Allow height to scale based on content */
-            flex-grow: 1;
-        }
-    </style>
+
 </head>
 
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:20:33 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:21:48 11-05-2024</p>
     <br>
-    <div class="h-full md:h-auto flex justify-center items-center">
-        <canvas id="playerChart" class="mx-auto"></canvas>
+    <div class="flex justify-center">
+        <div class="w-3/5">
+            <canvas id="playerChart"></canvas>
+        </div>
     </div>
 
     <script>
