--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -11,17 +11,16 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
-
 </head>
 
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:22:43 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:23:58 11-05-2024</p>
     <br>
     <div class="flex justify-center">
-        <div class="w-3/5">
-            <canvas id="playerChart"></canvas>
+        <div class="w-3/5 h-[60vh]">
+            <canvas id="playerChart" class="w-full h-full"></canvas>
         </div>
     </div>
 
