--- a/players/teachermiller.html
+++ b/players/teachermiller.html
@@ -16,13 +16,16 @@
 <body class="bg-background text-foreground">
     <h1 class="text-center text-4xl">teachermiller's Statistics</h1>
     <br>
-    <p class="text-center text-xl">Last updated 19:30:37 11-05-2024</p>
+    <p class="text-center text-xl">Last updated 19:30:51 11-05-2024</p>
     <br>
     <div class="flex justify-center">
         <div class="w-4/5 h-[60vh]">
             <canvas id="playerChart" class="w-full h-full"></canvas>
         </div>
     </div>
+    
+    <!-- Add stocks table -->
+    
 
     <script>
         const ctx = document.getElementById('playerChart');
