--- a/index.html
+++ b/index.html
@@ -3329,47 +3329,36 @@
 
 <!-- Search Functionality -->
 <script>
-    // Get the input element
+    // get the input element
     const searchInput = document.getElementById('accountSearch');
 
-    // Get specifically the rankings table by ID
+    // get specifically the rankings table by ID
     const rankingsTable = document.getElementById('rankings');
 
-    // Check if the rankingsTable element exists
-    if (rankingsTable) {
-        console.log('Rankings table found');
-    } else {
-        console.error('Rankings table not found');
-    }
-
-    // Get all table rows that contain account information (skip the header row)
+    // get all table rows that contain account information (skip the header row)
     const tableRows = Array.from(rankingsTable.querySelectorAll('tr')).slice(1);
 
-    // Check if tableRows array is populated
-    console.log('Table rows:', tableRows);
-
-    // Add event listener for input changes
+    // add event listener for input changes
     searchInput.addEventListener('input', function(e) {
         const searchTerm = e.target.value.toLowerCase();
-        console.log('Search term:', searchTerm);
 
-        // Loop through only the rows in the rankings table
+        // loop through only the rows in the rankings table
         tableRows.forEach(row => {
-            // Get text content from each column
+            // get text content from each column
             const rankingText = row.querySelector('td:nth-child(1)')?.textContent.toLowerCase() || '';
             const accountName = row.querySelector('td:nth-child(2) a')?.textContent.toLowerCase() || '';
             const moneyText = row.querySelector('td:nth-child(3)')?.textContent.toLowerCase() || '';
             const stocksText = row.querySelector('td:nth-child(4)')?.textContent.toLowerCase() || '';
             const zScoreText = row.querySelector('td:nth-child(5)')?.textContent.toLowerCase() || '';
 
-            // Check if the search term matches any of the fields
+            // check if the search term matches any of the fields
             const matches = rankingText.includes(searchTerm) ||
                           accountName.includes(searchTerm) ||
                           moneyText.includes(searchTerm) ||
                           stocksText.includes(searchTerm) ||
                           zScoreText.includes(searchTerm);
 
-            // Show/hide the row based on match
+            // show/hide the row based on match
             row.style.display = matches ? '' : 'none';
         });
     });
